# RoboticsPointCloudCompression

./: CMakeLists.txt  README.md  package.xml
results/: voxel_compressed.ply
src/: octree_compression.cpp  octree_decompression.cpp  original_point_cloud.cpp  save_point_cloud.cpp  voxel_grid_decompression.cpp  voxel_grid_filtering.cpp
